# corpus-base

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  cases.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
corpus_base/: __init__.py  __main__.py  api.py  build.py  citation.py  decision.py  justice.py  main.py  opinions.py  segment.py  settings.py  titletags.py  voteline.py
corpus_base/templates/: chief_dates.sql  get_justice_id.sql  ids_to_investigate.sql  update_justice_ids.sql
corpus_base/utils/: __init__.py  components.py  convertor.py  ponente.py  resources.py  segmentize.py  tags.py  voteline.py
corpus_cite/: __init__.py  __main__.py  citation.py  decision.py  helpers.py  ponente.py  resources.py  settings.py  tags.py  titletags.py  voteline.py
corpus_cite/templates/: ids_to_investigate.sql
decision/: index.html
docs/: decision.md  features.md  index.md  justice.md  misc.md  reference.md  segments.md
justice/: index.html
misc/: index.html
notebooks/: cases.ipynb  pyd.ipynb  tests.ipynb
reference/: index.html
search/: search_index.json
segments/: index.html
tests/: conftest.py  test_clean_ponencia_names.py  test_decision_row.py  test_fetch_src_sc_list.py  test_sc.yaml  test_tables.py  test_version.py
tests/data/decisions/legacy/c343d/: body.html  details.yaml  ponencia.html
tests/data/decisions/legacy/c343d/opinions/: ponencia.md
tests/data/decisions/sc/62055/: details.yaml  fallo.html  ponencia.html
tests/data/decisions/sc/62055/opinions/: ponencia.md
tests/data/decisions/sc/62206/: annex.html  body.html  ponencia.html
tests/data/decisions/sc/62206/opinions/: ponencia.md
tests/data/members/0bot/: details.yaml
tests/data/members/fernando/: details.yaml
tests/data/members/joy/: details.yaml
tests/data/members/maria/: details.yaml
tests/decisions/legacy/c343d/: data.yaml  fallo.html
tests/decisions/legacy/c343d/opinions/: ponencia.md
tests/decisions/sc/62055/: annex.html
tests/decisions/sc/62055/opinions/: ponencia.md
tests/decisions/sc/62206/: details.yaml  fallo.html
tests/decisions/sc/62206/opinions/: ponencia.md
