[tool.poetry]
name = "corpus-base"
version = "0.0.12"
description = "Initialize justice, decision, citation, voting, and opinion tables."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"             # see citation-utils + citation-report why python fixed at 3.11.0
citation-utils = "^0.0.17"    # citation-specific utils + pydantic, python-slugify, loguru
corpus-pax = "^0.0.8"         # contains sqlpyd (sqlite-utils, pydantic), email-validator, httpx
unidecode = "^1.3.6"
python-frontmatter = "^1.0.0"
markdownify = "^0.11.6"

[tool.poetry.group.dev.dependencies]
rich = "^12.6"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.7"
types-python-slugify = "^5.0.4"

[tool.pytest.ini_options]
filterwarnings = ['ignore::DeprecationWarning']

[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=corpus_base tests/"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
