[tool.poetry]
name = "corpus-base"
version = "0.1.8"
description = "Add justice, decision, citation, voting, opinion, and segment tables to pre-existing corpus-pax database."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://lawdata.xyz"
repository = "https://github.com/justmars/corpus-base"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
  "Framework :: Pydantic",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"          #
corpus-pax = "^0.1.11"    # contains sqlpyd (sqlite-utils, pydantic), email-validator, httpx, frontmatter
citation-utils = "^0.2.0" # citation-specific utils + pydantic, python-slugify, loguru
unidecode = "^1.3.6"
markdownify = "^0.11.6"

[tool.poetry.group.dev.dependencies]
rich = "^12.6"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.7"
types-python-slugify = "^5.0.4"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.0.6"

[tool.pytest.ini_options]
filterwarnings = ['ignore::DeprecationWarning']

[tool.ruff]
ignore = ["F401", "E501"]

[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=corpus_base tests/"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
