[tool.poetry]
name = "corpus-base"
version = "0.2.0"
description = "Add justice, decision, citation, voting, opinion, and segment tables to database."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
license = "MIT"
homepage = "https://lawsql.com"
repository = "https://github.com/justmars/corpus-base"
documentation = "https://mv3.dev/corpus-base"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
  "Framework :: Pydantic",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"
citation-utils = "^0.2.3" # citation-specific utils + pydantic, python-slugify, loguru
corpus-pax = "^0.1.12"    # sqlpyd (sqlite-utils, pydantic), email-validator, httpx, frontmatter
corpus-sc-toolkit = "^0.0.9" # various functions to extract prospective decision / opinion fields

[tool.poetry.group.dev.dependencies]
rich = "^13.3"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.7"
types-python-slugify = "^5.0.4"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.0.12"
notebook = "^6.5.2"

[tool.pytest.ini_options]
filterwarnings = ['ignore::DeprecationWarning']

[tool.ruff]
ignore = ["F401", "E501"]

[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=corpus_base tests/"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
